After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 759375 - Obvious Clutter deprecation warnings
Obvious Clutter deprecation warnings
Status: RESOLVED FIXED
Product: clutter-gtk
Classification: Platform
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: clutter-gtk maintainer(s)
clutter-gtk maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-12-11 22:59 UTC by Lionel Landwerlin
Modified: 2015-12-12 09:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
silence obvious Clutter deprecation warnings (1.82 KB, patch)
2015-12-11 22:59 UTC, Lionel Landwerlin
committed Details | Review

Description Lionel Landwerlin 2015-12-11 22:59:35 UTC
Easy fix :)
Comment 1 Lionel Landwerlin 2015-12-11 22:59:43 UTC
Created attachment 317236 [details] [review]
silence obvious Clutter deprecation warnings
Comment 2 Emmanuele Bassi (:ebassi) 2015-12-12 01:27:07 UTC
Review of attachment 317236 [details] [review]:

Sure.
Comment 3 Lionel Landwerlin 2015-12-12 09:24:53 UTC
Review of attachment 317236 [details] [review]:

Pushed to master.