silence obvious Clutter deprecation warnings

https://bugzilla.gnome.org/show_bug.cgi?id=759375